# facts

./: .gitignore  .justfile  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  migrations.dockerfile  openapi.yaml
.sqlx/: query-06ca09aebd831c09154a5ba20de46ea713aa9ecb6fb0bdd81d7d5eb265f66320.json  query-21d7853d37251e236866b2da584b9e75883d096818369eb47b27722a53aa8418.json  query-32ea7a6baab49cd8a3ad4aedd5b280b8c90f3f2cafb30dca8dc782e42e9a48b1.json  query-38864f53d2aa0704a2e55e129f9eb317f0ac4dd4f2cd1a4d03820544022fd53d.json  query-60a0a622740388e5cd410ef933faa8332318074071eaca5cd4d8e6b44abcfe90.json  query-77b6d163f5505281570b3fd6e5e70b42f3332ad68baa9d23508335b4032064cd.json  query-7d30e8fd2e30f41ae5a9afe28c93dff12a7fc2706577976a5da85c8870eefc23.json  query-84c5d21f7b90f81b61ccf94791b3cd806af8e5fd0b3473f2cce57cba0fd50d4e.json  query-979d09d3933518c9336de774e73e282b7a109b24ae8d4eb07cfe3fbabdeac56d.json
src/: config.rs  main.rs
src/facts/: mod.rs
src/facts/dao/: errors.rs  mod.rs
src/facts/dao/dtos/: entity.rs  mod.rs
src/facts/dao/impls/: hash_map.rs  mocked.rs  mod.rs  sqlx.rs
src/facts/migrations/: 0001_facts_table.sql
src/facts/repository/: errors.rs  impls.rs  mod.rs  models.rs
src/facts/router/: errors.rs  handlers.rs  mod.rs  models.rs  state.rs
src/facts/router/dtos/: entity.rs  mod.rs
src/facts/router/fixtures/: truncate_facts_table.sql
