[package]
name = "Facts"
version = "0.1.0"
authors = ["ysignat <ignatovegors@gmail.com>"]
edition = "2021"
rust-version = "1.88"
description = "Little website for sharing interesting facts with my friends"
readme = "README.md"
repository = "https://github.com/ysignat/facts"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"


[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.5.54", features = ["env", "derive", "string", "cargo"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
thiserror = "2.0.17"
rand = "0.9.2"
async-trait = "0.1.89"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "sqlite",
  "any",
] }

[dev-dependencies]
fake = { version = "4.3.0", features = ["derive", "dummy"] }
http-body-util = "0.1.3"
reqwest = "0.13.1"
serde_json = "1.0.149"
tower = { version = "0.5.2", features = ["util"] }
